--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ __pycache__/
 FitzHugh-Nagumo/data/multiparameter/data_FHN.mat
 FitzHugh-Nagumo/data/multiparameter/data_FHN_BF.mat
 FitzHugh-Nagumo/data/multiparameter/old_data/data_FHN.mat
+*.err
+*.out
