--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ __pycache__/
 *.py[cod]
 *$py.class
 **/.DS_Store
+**/*.pth
 FitzHugh-Nagumo/data/multiparameter/data_FHN.mat
 FitzHugh-Nagumo/data/multiparameter/data_FHN_BF.mat
 FitzHugh-Nagumo/data/multiparameter/old_data/data_FHN.mat
