--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ FitzHugh-Nagumo/data/multiparameter/data_FHN_BF.mat
 FitzHugh-Nagumo/data/multiparameter/old_data/data_FHN.mat
 *.err
 *.out
+**/*.json
+**/.vscode
